# Grandplan

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  LICENSE  PRIOR-ART-ADOPTION.md  README.md  RESEARCH.md  ROADMAP.md  SECURITY.md  SPEC-AGENT-INTAKE.md  SPEC-AGENT-VAULT.md  SPEC-P0-ENGINE.md  SPEC-PR-A.md  SPEC-PR-B.md  SPEC.md  borromeo.toml  pyproject.toml  run.bat
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: QUICKSTART-WINDOWS.md  WINDOWS.md
docs/adr/: 0001-record-architecture-decisions.md  0002-obsidian-vault-as-storage-and-viewer.md  0003-ports-and-adapters-core.md  0004-planning-model-graph-projections.md  0005-workspaces-capabilities-renderers.md  0006-capture-coordinator-serialization-observability.md  0007-relationship-classification-and-consistency.md  0008-event-sourced-progress-and-resources.md  0009-scalability-index-and-reconcile.md  0010-throughput-backpressure-observability.md  0011-organize-quality-vs-cost-eval.md
docs/notes/: CAPTURE-STRESS-TEST.md  FINDINGS.md  HANDOFF.md  PERF-MEMORY-AUDIT.md  PUBLISH-CHECKLIST.md  QUEUE-VIEW-SPEC.md  REMOTE-CAPTURE-TRANSPORT.md
docs/research/: A-offline-ai-second-brains.md  B-obsidian-logseq-ai-plugins.md  C-notetaking-capture-apps.md  D-ai-memory-knowledge-graphs.md  E-notes-to-action-planning.md  LANDSCAPE.md  LLM-WIKI-DEEPREAD.md  REFRESH-2026.md
docs/specs/: SPEC-ACT.md  SPEC-AGENT-KB.md  SPEC-AGENT-VAULT.md  SPEC-PR-C.md  SPEC-PR-D.md  SPEC-PR-E.md  SPEC-PR-F.md  SPEC-PR-G.md  SPEC-READONLY.md  SPEC-SCOPE.md
docs/wiki/: Architecture.md  Getting-Started.md  Home.md  Security.md
scripts/: bench_reconcile.py  eval_retrieval.py  seed-wiki.sh
src/grandplan/: __init__.py  __main__.py  cli.py
src/grandplan/adapters/: __init__.py  _ollama.py  answer_stream.py  capture.py  capture_intake.py  folder_watch.py  http_intake.py  kb_ask.py  kb_chat.py  llm_contextual_reconciler.py  llm_edit_detector.py  llm_entity_extractor.py  voice.py  (+9 more)
tests/: conftest.py  test_agenda.py  test_calendar.py  test_capture.py  test_cli.py  test_coordinator.py  test_densify.py  test_directive.py  test_e2e.py  test_entities.py  test_export.py  test_folder_watch.py  test_graph.py  test_gui_wiring.py  test_http_intake.py  test_index_location.py  test_llm_contextual_reconciler.py  test_llm_edit_detector.py  test_llm_placer.py  test_llm_reconciler.py  test_llm_update_detector.py  test_lossless_roundtrip.py  test_mcp_server.py  test_note_models.py  test_note_store.py  test_obsidian_open.py  test_offline.py  test_ollama_organizer.py  test_organize.py  test_pipeline.py  test_placement.py  test_planner.py  test_project.py  test_quality.py  test_query.py  test_reconcile.py  test_render.py  test_report.py  test_repository.py  test_resources.py  (+7 more)
tests/adapters/: test_answer_stream.py  test_capture.py  test_capture_intake.py  test_kb_ask.py  test_kb_chat.py  test_llm_contextual_reconciler.py  test_llm_entity_extractor.py  test_llm_json_contract.py  test_llm_placer.py  test_obsidian_graph.py  test_obsidian_open.py  test_ollama_json.py  test_ollama_organizer.py  test_st_embedder.py  test_vec_index.py
tests/app/: test_chat_window.py  test_coordinator.py  test_diagnostics.py  test_enrich.py  test_gui_wiring.py  test_mobile_api.py  test_progress.py  test_review.py  test_scope_sync.py
tests/core/: test_attach.py  test_chunk.py  test_edit_detect.py  test_embed.py  test_focus.py  test_fs.py  test_fulfil.py  test_lossless_roundtrip.py  test_neighborhood.py  test_note_models.py  test_placement.py  test_project.py  test_query.py  test_readonly.py  test_relink.py  test_render.py  test_report.py  test_resources.py  test_retrieval.py  test_scope.py  test_urgency.py  test_vault.py  test_vault_import.py
(+54 files in other folders)
