[project]
name = "grandplan"
version = "0.0.0"
description = "Offline-first personal knowledge organizer — gated core."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
source = ["grandplan"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
grandplan = "grandplan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
llm = ["ollama>=0.3"]
embeddings = ["sentence-transformers>=2.2"]

[[tool.mypy.overrides]]
module = ["ollama", "ollama.*", "sentence_transformers", "sentence_transformers.*"]
ignore_missing_imports = true
