[project]
name = "grandplan"
version = "0.0.0"
description = "Offline-first personal knowledge organizer — gated core."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
source = ["grandplan"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
grandplan = "grandplan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
llm = ["ollama>=0.3"]
embeddings = ["sentence-transformers>=2.2"]
windows = ["pynput>=1.7", "pyperclip>=1.8", "uiautomation>=2.0"]
gui = ["PySide6>=6.5"]
mcp = ["mcp>=1.0"]
voice = ["sounddevice>=0.4", "faster-whisper>=1.0"]

[[tool.mypy.overrides]]
module = [
  "ollama",
  "ollama.*",
  "sentence_transformers",
  "sentence_transformers.*",
  "pynput",
  "pynput.*",
  "pyperclip",
  "uiautomation",
  "PySide6",
  "PySide6.*",
  "mcp",
  "mcp.*",
  "sounddevice",
  "faster_whisper",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The GUI adapter subclasses a Qt class (QObject) for signal marshalling. In the gate environment
# the optional [gui] extra (PySide6) isn't installed, so PySide6 resolves to Any and strict mode's
# disallow_subclassing_any would reject it — even though it typechecks fine where PySide6 IS present.
# Scope the relaxation to this one module so the typecheck is identical with or without the extra
# (CI/dev parity); everything else stays strict.
module = ["grandplan.app.gui"]
disallow_subclassing_any = false

[[tool.mypy.overrides]]
# The MCP adapter registers handlers via the `mcp` library's decorators. In the gate environment the
# optional [mcp] extra isn't installed, so `mcp` resolves to Any and strict mode flags its decorators
# as untyped — even though it typechecks where `mcp` IS present. Scope the relaxation to this one
# lazily-imported module (CI/dev parity); everything else stays strict.
module = ["grandplan.adapters.mcp_server"]
disallow_untyped_decorators = false
disallow_untyped_calls = false
